<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:layout_marginTop="150dp"
                android:layout_marginBottom="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_back"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/your_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/order"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/order"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="30dp"
                        android:contentDescription="@string/order"
                        android:src="@drawable/order"
                        app:layout_constraintStart_toEndOf="@id/your_order"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="27dp"
                        android:text="@string/two"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@id/order"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/x"
                        android:src="@drawable/x"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    
                    <LinearLayout
                        android:id="@+id/address_time"
                        android:layout_width="380dp"
                        android:layout_height="125dp"
                        android:background="@drawable/shape_address_time"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="65dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:contentDescription="@string/home"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/home"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="10dp"/>
                            
                            <LinearLayout
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:layout_width="155dp"
                                android:layout_height="50dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="14sp"
                                    android:text="@string/name"
                                    android:textColor="@color/black"
                                    android:textStyle="bold"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="12sp"
                                    android:text="@string/address"
                                    android:textColor="@color/grey"
                                    android:textStyle="bold"/>
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:contentDescription="@string/home"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/time"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="10dp"/>

                            <LinearLayout
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:layout_width="155dp"
                                android:layout_height="50dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="14sp"
                                    android:text="@string/time"
                                    android:textColor="@color/black"
                                    android:textStyle="bold"/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/food1"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/address_time"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_marginStart="15dp"
                            android:layout_width="88dp"
                            android:layout_height="73dp"
                            android:src="@drawable/fried_rice"
                            android:contentDescription="@string/food"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/food"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:layout_marginBottom="15dp"
                            android:layout_marginStart="10dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/food2"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/food1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_marginStart="15dp"
                            android:layout_width="88dp"
                            android:layout_height="73dp"
                            android:src="@drawable/fried_rice"
                            android:contentDescription="@string/food"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/food"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:layout_marginBottom="15dp"
                            android:layout_marginStart="10dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/food3"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/food2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_marginStart="15dp"
                            android:layout_width="88dp"
                            android:layout_height="73dp"
                            android:src="@drawable/fried_rice"
                            android:contentDescription="@string/food"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/food"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:layout_marginBottom="15dp"
                            android:layout_marginStart="10dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/food4"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/food3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_marginStart="15dp"
                            android:layout_width="88dp"
                            android:layout_height="73dp"
                            android:src="@drawable/fried_rice"
                            android:contentDescription="@string/food"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/food"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:layout_marginBottom="15dp"
                            android:layout_marginStart="10dp"/>
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/botton_nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white_bnb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>